// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color prop changes the color of the Horizontal Rule and bolt 1`] = `
body #PickUpUI .j0 {
  display: flex;
  padding: 16px;
  position: relative;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-around;
}

body #PickUpUI .j1 {
  width: 100%;
  border: none;
  height: 1px;
}

body #PickUpUI .j2 {
  background-color: red;
}

body #PickUpUI .j3 {
  width: 120px;
  display: inline-flex;
  position: relative;
  text-align: center;
  align-items: center;
  justify-content: center;
}

<div>
  <div
    id="PickUpUI"
  >
    <div
      class="j0"
      data-testid="horizontalRule"
    >
      <hr
        class="j1 j2"
      />
      <div
        class="j3"
      >
        <svg
          fill="red"
          height="18"
          viewBox="0 0 15 18"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M8.75469 0L8.28319 6.96H14.4L5.64531 18L6.11681 11.04H0L8.75469 0Z"
            fill="red"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <hr
        class="j1 j2"
      />
       
    </div>
  </div>
</div>
`;

exports[`Horizontal Rule renders without crashing, matches snapshot 1`] = `
body #PickUpUI .j0 {
  display: flex;
  padding: 16px;
  position: relative;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-around;
}

body #PickUpUI .j1 {
  width: 100%;
  border: none;
  height: 1px;
}

body #PickUpUI .j2 {
  background-color: #615E66;
}

<div>
  <div
    id="PickUpUI"
  >
    <div
      class="j0"
      data-testid="horizontalRule"
    >
      <hr
        class="j1 j2"
      />
    </div>
  </div>
</div>
`;

exports[`Horizontal Rule with Bolt renders without crashing, matches snapshot 1`] = `
body #PickUpUI .j0 {
  display: flex;
  padding: 16px;
  position: relative;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-around;
}

body #PickUpUI .j1 {
  width: 100%;
  border: none;
  height: 1px;
}

body #PickUpUI .j2 {
  background-color: #615E66;
}

body #PickUpUI .j3 {
  width: 120px;
  display: inline-flex;
  position: relative;
  text-align: center;
  align-items: center;
  justify-content: center;
}

<div>
  <div
    id="PickUpUI"
  >
    <div
      class="j0"
      data-testid="horizontalRule"
    >
      <hr
        class="j1 j2"
      />
      <div
        class="j3"
      >
        <svg
          height="18"
          viewBox="0 0 15 18"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M8.75469 0L8.28319 6.96H14.4L5.64531 18L6.11681 11.04H0L8.75469 0Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <hr
        class="j1 j2"
      />
       
    </div>
  </div>
</div>
`;
